{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerNormal",
            "id": "5874ab38-e4e8-4ec2-b44e-c210b3aadb5f",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1aea532d-5da3-4fbd-a33b-02b7aa6cef46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_fb",
                    "type": "Value",
                    "id": "54c954b6-8cdf-4e3d-b665-e5f528bab69c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Move_lr",
                    "type": "Value",
                    "id": "1bf95feb-0f0e-4ba4-9744-692302bf6a42",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "979a6226-f7f4-4c36-8893-7dcfc987e896",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "123bae91-2523-423c-804f-8dbd7fe72d31",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f7178333-02f0-4a69-a7ec-540079ab31c5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_fb",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "88dfac79-3118-4a78-9fac-05ac9165c86e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_fb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ba399b8a-d658-4bc6-b3d0-90e9586f452c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_fb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "1f88b38b-8cb3-4846-94d4-4767d1c33817",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_lr",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "3b2fffb4-3ca8-4f47-9582-582eb02eced9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_lr",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "acb0dd47-6b46-4365-b83d-ba21b1df2925",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_lr",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b6179d02-b55b-45a5-9f09-7b5ef112d4c4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}